--- a/src/app/client/sidebarclient/sidebarclient.component.html
+++ b/src/app/client/sidebarclient/sidebarclient.component.html
@@ -17,7 +17,7 @@
   
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/dashboardClient">
+          <a class="nav-link" routerLink="/dashboard-client">
               <i class="fas fa-home fa-2x text-gray-300"></i>
               <span>Dashboard </span></a>
       </li>
@@ -29,7 +29,7 @@
         </li>
       
         <li class="nav-item active">
-            <a class="nav-link" routerLink="/missionsClient">
+            <a class="nav-link" routerLink="/missions-client">
                 <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
                 <span>All Missions </span></a>
         </li>
